fix: overflow hidden not working on mobile and hover sticking on mobile
Fix hover sticking on mobile

fix? pressing on mobile

fix: overflow not hiding and hover sticking on mobile

--- a/style.css
+++ b/style.css
@@ -46,8 +46,10 @@ body {
     transition: all 0.1s ease-in-out;
 }
 
-.button:hover {
-    background-color: #292929;
+@media (hover: hover) {
+    .button:hover {
+        background-color: #292929;
+    }
 }
 
 .button:active {
